New version: SimpleLockFiles v0.2.0
UUID: 0c975e61-21d9-4454-8de5-ff08fd2c478f
Repo:
Tree: 65ecb8485155b6473cd928440c5ec5221d5853a2

--- a/S/SimpleLockFiles/Versions.toml
+++ b/S/SimpleLockFiles/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "af9286b45e1016265eb02690da0bb991446bb76d"
+
+["0.2.0"]
+git-tree-sha1 = "65ecb8485155b6473cd928440c5ec5221d5853a2"
