--- a/S/SimpleLockFiles/Versions.toml
+++ b/S/SimpleLockFiles/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "fd3d86ce786cfce251b4b5bf71cb98340b3a9f69"
 
 ["0.4.0"]
 git-tree-sha1 = "a0a66ba01bf033164e98295459d2194685705f20"
+
+["0.4.1"]
+git-tree-sha1 = "09590360acb99238e9c64ac5d03fe27879d9a593"
