New version: GitLinks v0.6.1
UUID: e5655290-0136-40fd-b997-9e22755203bc
Repo:
Tree: b398b0850cc12440a035dde30614823366a4b956

--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "33f5e3d36795d6e2400151488d98949588750acf"
 
 ["0.6.0"]
 git-tree-sha1 = "e49acd3a280ab2e54d388b94e59b45718ad979de"
+
+["0.6.1"]
+git-tree-sha1 = "b398b0850cc12440a035dde30614823366a4b956"
