--- a/S/SimpleLockFiles/Versions.toml
+++ b/S/SimpleLockFiles/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "09590360acb99238e9c64ac5d03fe27879d9a593"
 
 ["0.4.2"]
 git-tree-sha1 = "6b42c3d3e7666cc6997c08b1854d0abab326d5c8"
+
+["0.4.3"]
+git-tree-sha1 = "c3276d86362f1fb75fff15d2489787bc48b16bd9"
