New version: JLAssistant v0.2.21
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 71a0965036d8055441757dc3a363ae711ee732c1

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -48,3 +48,6 @@ git-tree-sha1 = "c80c5701bb496239c949baf8bedae4b1a2178438"
 
 ["0.2.20"]
 git-tree-sha1 = "a523569efe9108b1afc1ba905c8deb7fd67d65c9"
+
+["0.2.21"]
+git-tree-sha1 = "71a0965036d8055441757dc3a363ae711ee732c1"
