New version: FilesTreeTools v0.3.1
UUID: 638332cd-b357-4bf5-bfa2-3531168477f5
Repo:
Tree: 4e51e4a9969b3327fe25899df77d8eb2fed56ae9

--- a/F/FilesTreeTools/Versions.toml
+++ b/F/FilesTreeTools/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "2f8064a66585ec52383cb2a66c8019a4316ef718"
 
 ["0.3.0"]
 git-tree-sha1 = "8854c29743e17199492b57e565e995bcfd912ec4"
+
+["0.3.1"]
+git-tree-sha1 = "4e51e4a9969b3327fe25899df77d8eb2fed56ae9"
