New version: FilesTreeTools v0.4.0
UUID: 638332cd-b357-4bf5-bfa2-3531168477f5
Repo:
Tree: 2f5664e253380590c37d97f601d2317a9c4d0223

--- a/F/FilesTreeTools/Versions.toml
+++ b/F/FilesTreeTools/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "8854c29743e17199492b57e565e995bcfd912ec4"
 
 ["0.3.1"]
 git-tree-sha1 = "4e51e4a9969b3327fe25899df77d8eb2fed56ae9"
+
+["0.4.0"]
+git-tree-sha1 = "2f5664e253380590c37d97f601d2317a9c4d0223"
