New version: JLAssistant v0.2.23
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 78b9d843d02fbb4f4f05df6921a6f5fc137946c8

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "71a0965036d8055441757dc3a363ae711ee732c1"
 
 ["0.2.22"]
 git-tree-sha1 = "cfc5ea74bffdc3d9bc6a0587b39c9d6d5837748c"
+
+["0.2.23"]
+git-tree-sha1 = "78b9d843d02fbb4f4f05df6921a6f5fc137946c8"
