New version: EasyEvents v0.1.1
UUID: 1c3e8eab-fb9d-4faa-86a4-2d4d6165c1a6
Repo:
Tree: f2a2f51083a8c7f83e8098309e4d4efdc0acb277

--- a/E/EasyEvents/Versions.toml
+++ b/E/EasyEvents/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "2026d8d09294e4821f469fc40b81c34ab03e6c0a"
+
+["0.1.1"]
+git-tree-sha1 = "f2a2f51083a8c7f83e8098309e4d4efdc0acb277"
