--- a/S/StringRepFilter/Versions.toml
+++ b/S/StringRepFilter/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "1381f21df68906ec2efa725705ae7580fe342e2e"
+
+["0.2.0"]
+git-tree-sha1 = "7b45972c9a3033fdf1b59a80fb089609e767932e"
