--- a/R/RemAssistant/Versions.toml
+++ b/R/RemAssistant/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "0765991b07db2350737dd795e39285899cc5e190"
+
+["0.1.1"]
+git-tree-sha1 = "916bfc02230f9ac9d2f97723312a70e115a73e29"
