--- a/J/JLAssistant/Deps.toml
+++ b/J/JLAssistant/Deps.toml
@@ -5,6 +5,9 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 
+["0.2.28-0"]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+
 ["0.2.3-0"]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
