--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -63,3 +63,6 @@ git-tree-sha1 = "c8d54aed9352f9aa916de4c1ca89ab06a6758015"
 
 ["0.2.26"]
 git-tree-sha1 = "7faf140ad002764a8d2df8d8a73861e351836462"
+
+["0.2.28"]
+git-tree-sha1 = "324409799ab0ed369208667adb8ffa6db16826d3"
