--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -66,3 +66,6 @@ git-tree-sha1 = "7faf140ad002764a8d2df8d8a73861e351836462"
 
 ["0.2.28"]
 git-tree-sha1 = "324409799ab0ed369208667adb8ffa6db16826d3"
+
+["0.2.29"]
+git-tree-sha1 = "dc67a392f1aa45d904e1cdc7646cccc25cebd42d"
