--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "b398b0850cc12440a035dde30614823366a4b956"
 
 ["0.6.2"]
 git-tree-sha1 = "ebfde62a21450d3956fd438ebde8268f596808d2"
+
+["0.6.3"]
+git-tree-sha1 = "c56c11737898b03c4385a51568c9ce6f100779f7"
