--- a/R/RemAssistant/Deps.toml
+++ b/R/RemAssistant/Deps.toml
@@ -12,3 +12,6 @@ StringRepFilter = "bfe2832f-5600-46d7-a449-140889a58637"
 ["0.2-0"]
 GitLinks = "e5655290-0136-40fd-b997-9e22755203bc"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
+
+["0.3-0"]
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
