--- a/R/RemAssistant/Versions.toml
+++ b/R/RemAssistant/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "916bfc02230f9ac9d2f97723312a70e115a73e29"
 
 ["0.2.0"]
 git-tree-sha1 = "5d691ae48dfafef82778ae9bfa8dd0e448826a1e"
+
+["0.3.0"]
+git-tree-sha1 = "c96c07b38c15abcf8e2825ed3a1561f0b679f3a3"
