--- a/R/RemAssistant/Deps.toml
+++ b/R/RemAssistant/Deps.toml
@@ -15,3 +15,6 @@ ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 ["0.3-0"]
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+
+["0.3.1-0"]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
