New version: BibUtils v0.1.1
UUID: 769de9c1-ca9f-41ae-9e69-f7e27706da2c
Repo:
Tree: 02d06dbdbcec89d3a137a3ca6f56fd43db99dc1b

--- a/B/BibUtils/Versions.toml
+++ b/B/BibUtils/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "c3030d94a71296e82ff54a0b8b4b4a971c6a7f4e"
+
+["0.1.1"]
+git-tree-sha1 = "02d06dbdbcec89d3a137a3ca6f56fd43db99dc1b"
