--- a/T/TexAssistant/Versions.toml
+++ b/T/TexAssistant/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "1f6ba89c678ef0a1e10d388a1828dd5f0cb21797"
+
+["0.1.2"]
+git-tree-sha1 = "76a15f622fba17430a8e12d96123292684365837"
