--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "d8a2a2821d68f953a95f21ec8b7d144a0fedd435"
 
 ["0.1.8"]
 git-tree-sha1 = "2381ec395a54410fe9f7bc226903715ff36b0bfa"
+
+["0.2.0"]
+git-tree-sha1 = "d633645e3f306b49276f056b9bd7ef95f03cf58d"
