--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "2381ec395a54410fe9f7bc226903715ff36b0bfa"
 
 ["0.2.0"]
 git-tree-sha1 = "d633645e3f306b49276f056b9bd7ef95f03cf58d"
+
+["0.2.1"]
+git-tree-sha1 = "9572fe3ff4e61ee015a969a0c5d7f6f26f1a4cf3"
