New version: MetNets v0.2.2
UUID: e57bcde5-101c-47b4-bac9-e79e238e37d4
Repo:
Tree: ae40da714fe304b7ec0c79a498926813f14d8a54

--- a/M/MetNets/Versions.toml
+++ b/M/MetNets/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "d633645e3f306b49276f056b9bd7ef95f03cf58d"
 
 ["0.2.1"]
 git-tree-sha1 = "9572fe3ff4e61ee015a969a0c5d7f6f26f1a4cf3"
+
+["0.2.2"]
+git-tree-sha1 = "ae40da714fe304b7ec0c79a498926813f14d8a54"
