New version: ObsidianAssistant v0.1.1
UUID: ef2754c0-c555-4d81-bf39-f3e359f0c7f3
Repo:
Tree: b61e11dbe5b80a5c90449d6a8a9ef41743a181de

--- a/O/ObsidianAssistant/Versions.toml
+++ b/O/ObsidianAssistant/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "9f6aa27f0e58f8464bc7426dd8e7273ed0da2817"
+
+["0.1.1"]
+git-tree-sha1 = "b61e11dbe5b80a5c90449d6a8a9ef41743a181de"
