New version: ObsidianAssistant v0.1.2
UUID: ef2754c0-c555-4d81-bf39-f3e359f0c7f3
Repo:
Tree: 0193ff200897c0a133592e4002accd32d1f8e053

--- a/O/ObsidianAssistant/Versions.toml
+++ b/O/ObsidianAssistant/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "9f6aa27f0e58f8464bc7426dd8e7273ed0da2817"
 
 ["0.1.1"]
 git-tree-sha1 = "b61e11dbe5b80a5c90449d6a8a9ef41743a181de"
+
+["0.1.2"]
+git-tree-sha1 = "0193ff200897c0a133592e4002accd32d1f8e053"
