--- a/O/ObsidianAssistant/Versions.toml
+++ b/O/ObsidianAssistant/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "b61e11dbe5b80a5c90449d6a8a9ef41743a181de"
 
 ["0.1.2"]
 git-tree-sha1 = "0193ff200897c0a133592e4002accd32d1f8e053"
+
+["0.1.3"]
+git-tree-sha1 = "954c544b3a51f0ac5cbb34c4b1a649e3a5789682"
