--- a/O/ObsidianAssistant/Versions.toml
+++ b/O/ObsidianAssistant/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "0193ff200897c0a133592e4002accd32d1f8e053"
 
 ["0.1.3"]
 git-tree-sha1 = "954c544b3a51f0ac5cbb34c4b1a649e3a5789682"
+
+["0.1.4"]
+git-tree-sha1 = "db93beeac7d6a6a034238d1560df9977902f4ad5"
