New version: EasyEvents v0.3.2
UUID: 1c3e8eab-fb9d-4faa-86a4-2d4d6165c1a6
Repo:
Tree: 8bcc04c5625b8f1bae7c62de360af373a1116d57

--- a/E/EasyEvents/Versions.toml
+++ b/E/EasyEvents/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "f2a2f51083a8c7f83e8098309e4d4efdc0acb277"
 
 ["0.2.0"]
 git-tree-sha1 = "d6a91da0fb81848144ee98662c2453f2fc9159e2"
+
+["0.3.2"]
+git-tree-sha1 = "8bcc04c5625b8f1bae7c62de360af373a1116d57"
