New version: ObaASTs v0.1.1
UUID: 1070a898-5650-4dbc-bdc4-2f105286d314
Repo:
Tree: 9f52714af1b5e579c7288206570a28f9a2766dae

--- a/O/ObaASTs/Versions.toml
+++ b/O/ObaASTs/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "7d40db5167872c665563c7496890701c64b159d7"
+
+["0.1.1"]
+git-tree-sha1 = "9f52714af1b5e579c7288206570a28f9a2766dae"
