New version: JLAssistant v0.2.31
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: e7756bd08bcf1cc3d0af69d1b77d15a7810dc150

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -72,3 +72,6 @@ git-tree-sha1 = "dc67a392f1aa45d904e1cdc7646cccc25cebd42d"
 
 ["0.2.30"]
 git-tree-sha1 = "d56b4c1809a1333996d0e744e825e0850b18a679"
+
+["0.2.31"]
+git-tree-sha1 = "e7756bd08bcf1cc3d0af69d1b77d15a7810dc150"
