--- a/O/ObaASTs/Versions.toml
+++ b/O/ObaASTs/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "7d40db5167872c665563c7496890701c64b159d7"
 
 ["0.1.1"]
 git-tree-sha1 = "9f52714af1b5e579c7288206570a28f9a2766dae"
+
+["0.1.2"]
+git-tree-sha1 = "06c05f362b4df0d75f2276c950c7bde59700d83d"
