--- a/Registry.toml
+++ b/Registry.toml
@@ -7,6 +7,7 @@ repo = "https://github.com/FF-UH/CSC_Registry.jl"
 1070a898-5650-4dbc-bdc4-2f105286d314 = { name = "ObaASTs", path = "O/ObaASTs" }
 1c3e8eab-fb9d-4faa-86a4-2d4d6165c1a6 = { name = "EasyEvents", path = "E/EasyEvents" }
 1d417f3e-fd42-11ea-18da-dda57c9b97b2 = { name = "UtilsJL", path = "U/UtilsJL" }
+2466591a-1acb-44b6-b4da-1e937b8575b3 = { name = "ObaServer", path = "O/ObaServer" }
 25937451-55af-4cf1-a681-2354f35bf0f3 = { name = "PkgMassInstaller", path = "P/PkgMassInstaller" }
 3cb95532-3c78-4535-bbc5-067405b402f6 = { name = "RegexTools", path = "R/RegexTools" }
 466ec94f-58aa-4bf1-ae55-0fdfea5849a7 = { name = "PrintTools", path = "P/PrintTools" }
