New version: ObaServer v0.1.1
UUID: 2466591a-1acb-44b6-b4da-1e937b8575b3
Repo:
Tree: 620516b7b8f49ca860f3d87e2c2ad1bf52c58601

--- a/O/ObaServer/Versions.toml
+++ b/O/ObaServer/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "cf8e0ca5520856e025c703a795a5cad30db5c6bd"
+
+["0.1.1"]
+git-tree-sha1 = "620516b7b8f49ca860f3d87e2c2ad1bf52c58601"
