--- a/O/ObaServer/Versions.toml
+++ b/O/ObaServer/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "cf8e0ca5520856e025c703a795a5cad30db5c6bd"
 
 ["0.1.1"]
 git-tree-sha1 = "620516b7b8f49ca860f3d87e2c2ad1bf52c58601"
+
+["0.1.2"]
+git-tree-sha1 = "c95f6084f68a43d5f132ca9c0f91e74251c4779c"
