--- a/G/GitLinks/Deps.toml
+++ b/G/GitLinks/Deps.toml
@@ -1,2 +1,6 @@
 ["0.6.1-0"]
 SimpleLockFiles = "0c975e61-21d9-4454-8de5-ff08fd2c478f"
+
+["0.9-0"]
+GWUtils = "772e7830-88e0-466f-82c6-af9b8962b67b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
