--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "f60d28fa775657e952d130a9e68e9580e1b0451e"
 
 ["0.7.1"]
 git-tree-sha1 = "a71e0dcc75927f79c097e29cc0feb81b43de7b80"
+
+["0.9.0"]
+git-tree-sha1 = "95b70ca31d96bbcc5db783dcd4e9f7c537c0f62b"
