--- a/G/GitLinks/Deps.toml
+++ b/G/GitLinks/Deps.toml
@@ -1,3 +1,6 @@
+["0.10-0"]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+
 ["0.6.1-0"]
 SimpleLockFiles = "0c975e61-21d9-4454-8de5-ff08fd2c478f"
 
