--- a/G/GitLinks/Versions.toml
+++ b/G/GitLinks/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "a71e0dcc75927f79c097e29cc0feb81b43de7b80"
 
 ["0.9.0"]
 git-tree-sha1 = "95b70ca31d96bbcc5db783dcd4e9f7c537c0f62b"
+
+["0.10.0"]
+git-tree-sha1 = "141ddfbf2cd385f50fd7fbde46a8b43414608020"
