--- a/G/GitWorkers/Versions.toml
+++ b/G/GitWorkers/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "690cfb1ee2cb1e82d2b5b1d087b5ccf59abea0b7"
 
 ["0.8.0"]
 git-tree-sha1 = "4b8559e1129ba764e5d6a3153fa120e3d124ebd3"
+
+["0.8.1"]
+git-tree-sha1 = "64887519e4ac40213e7421439eff9119905cbd39"
