New version: GWUtils v0.1.2
UUID: 772e7830-88e0-466f-82c6-af9b8962b67b
Repo:
Tree: 46b9d957930d4ac5f64023bf88f2fe5c18d68373

--- a/G/GWUtils/Versions.toml
+++ b/G/GWUtils/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "1a8ab2fb69215528fdfb60bf680700f2c86cd021"
 
 ["0.1.1"]
 git-tree-sha1 = "9ed2f81513fea7ede440c70dbc991ebce58092c1"
+
+["0.1.2"]
+git-tree-sha1 = "46b9d957930d4ac5f64023bf88f2fe5c18d68373"
