--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -75,3 +75,6 @@ git-tree-sha1 = "d56b4c1809a1333996d0e744e825e0850b18a679"
 
 ["0.2.31"]
 git-tree-sha1 = "e7756bd08bcf1cc3d0af69d1b77d15a7810dc150"
+
+["0.3.0"]
+git-tree-sha1 = "138999eeb0271ffbf81111e095274673c2b02eb9"
