New version: JLAssistant v0.3.3
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: ecc1ba7ce33b1feb7feb3c68a85004f62b729f4a

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -81,3 +81,6 @@ git-tree-sha1 = "138999eeb0271ffbf81111e095274673c2b02eb9"
 
 ["0.3.2"]
 git-tree-sha1 = "3cedb17a11fcb853ed67daa0bf63434a23c89800"
+
+["0.3.3"]
+git-tree-sha1 = "ecc1ba7ce33b1feb7feb3c68a85004f62b729f4a"
