New version: JLAssistant v0.3.5
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 22fb333524392445357f5d4308c4f76a5e280527

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -87,3 +87,6 @@ git-tree-sha1 = "ecc1ba7ce33b1feb7feb3c68a85004f62b729f4a"
 
 ["0.3.4"]
 git-tree-sha1 = "e53863f898411fe89dc32d05631672bfd200c7b9"
+
+["0.3.5"]
+git-tree-sha1 = "22fb333524392445357f5d4308c4f76a5e280527"
