--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -90,3 +90,6 @@ git-tree-sha1 = "e53863f898411fe89dc32d05631672bfd200c7b9"
 
 ["0.3.5"]
 git-tree-sha1 = "22fb333524392445357f5d4308c4f76a5e280527"
+
+["0.3.6"]
+git-tree-sha1 = "dd1986bb3c2235a9d9c71261e852e0cbe6dfe3b9"
