--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -93,3 +93,6 @@ git-tree-sha1 = "22fb333524392445357f5d4308c4f76a5e280527"
 
 ["0.3.6"]
 git-tree-sha1 = "dd1986bb3c2235a9d9c71261e852e0cbe6dfe3b9"
+
+["0.3.7"]
+git-tree-sha1 = "f004efac36f3e06a39be443685e1676fc4e76099"
