--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -96,3 +96,6 @@ git-tree-sha1 = "dd1986bb3c2235a9d9c71261e852e0cbe6dfe3b9"
 
 ["0.3.7"]
 git-tree-sha1 = "f004efac36f3e06a39be443685e1676fc4e76099"
+
+["0.3.8"]
+git-tree-sha1 = "4a833bb7847867d902c3549dbae37042c3892845"
