New version: JLAssistant v0.3.10
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 10e1a067b0c35410f3cef8d136598e446fbd426c

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -102,3 +102,6 @@ git-tree-sha1 = "4a833bb7847867d902c3549dbae37042c3892845"
 
 ["0.3.9"]
 git-tree-sha1 = "fc4e220ff36b31b59e094a50dd95f1ce43a2dc06"
+
+["0.3.10"]
+git-tree-sha1 = "10e1a067b0c35410f3cef8d136598e446fbd426c"
