New version: JLAssistant v0.3.13
UUID: b110ed5b-1827-4ea4-a31c-50efd441af06
Repo:
Tree: 40139090d3d8e5c0a3894482ef69ae2ea910902f

--- a/J/JLAssistant/Versions.toml
+++ b/J/JLAssistant/Versions.toml
@@ -111,3 +111,6 @@ git-tree-sha1 = "cd9f8a6c36a1236fd23f5e0062ea0e0d1e99face"
 
 ["0.3.12"]
 git-tree-sha1 = "3d97f5e70afef96bb6aba138be1dbaaf57a183de"
+
+["0.3.13"]
+git-tree-sha1 = "40139090d3d8e5c0a3894482ef69ae2ea910902f"
