--- a/O/ObaServer/Deps.toml
+++ b/O/ObaServer/Deps.toml
@@ -3,3 +3,8 @@ EasyEvents = "1c3e8eab-fb9d-4faa-86a4-2d4d6165c1a6"
 FilesTreeTools = "638332cd-b357-4bf5-bfa2-3531168477f5"
 ObaASTs = "1070a898-5650-4dbc-bdc4-2f105286d314"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+["0.1.3-0"]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+ObaBase = "ed65db08-98aa-43d3-9a5a-577874b2c92a"
