--- a/O/ObaServer/Versions.toml
+++ b/O/ObaServer/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "620516b7b8f49ca860f3d87e2c2ad1bf52c58601"
 
 ["0.1.2"]
 git-tree-sha1 = "c95f6084f68a43d5f132ca9c0f91e74251c4779c"
+
+["0.1.3"]
+git-tree-sha1 = "1b634c6e79e231d3af0244cee92a61c4884b378c"
