New version: SimpleLockFiles v0.6.0
UUID: 0c975e61-21d9-4454-8de5-ff08fd2c478f
Repo:
Tree: a7a1659ff941ca9e1953479af0e947ec1aa6e90a

--- a/S/SimpleLockFiles/Versions.toml
+++ b/S/SimpleLockFiles/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "c3276d86362f1fb75fff15d2489787bc48b16bd9"
 
 ["0.5.0"]
 git-tree-sha1 = "1bfccf10d21fca7c1de9248ac0c4531569d486da"
+
+["0.6.0"]
+git-tree-sha1 = "a7a1659ff941ca9e1953479af0e947ec1aa6e90a"
