--- a/S/SimpleLockFiles/Deps.toml
+++ b/S/SimpleLockFiles/Deps.toml
@@ -1,2 +1,5 @@
-["0.5-0"]
+["0.5"]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+["0.6-0"]
+FileWatching = "7b1f6079-737a-58dc-b8bc-7a2ca5c1b5ee"
