New version: SimpleLockFiles v0.6.1
UUID: 0c975e61-21d9-4454-8de5-ff08fd2c478f
Repo:
Tree: a90e90deadb06a974df7af84f5687fc4c97b6a5e

--- a/S/SimpleLockFiles/Versions.toml
+++ b/S/SimpleLockFiles/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "1bfccf10d21fca7c1de9248ac0c4531569d486da"
 
 ["0.6.0"]
 git-tree-sha1 = "a7a1659ff941ca9e1953479af0e947ec1aa6e90a"
+
+["0.6.1"]
+git-tree-sha1 = "a90e90deadb06a974df7af84f5687fc4c97b6a5e"
